# RESEARCH_AI_AGENT

./: .gitignore  README.md  start-dev-tools.ps1
dev-tools-ui/: README.md  package-lock.json  package.json  playwright.config.ts  start-dev.ps1
dev-tools-ui/public/: api-test.html
dev-tools-ui/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
dev-tools-ui/src/app/api/backend/: route.ts
dev-tools-ui/src/app/api/search/: route.ts
dev-tools-ui/src/app/api/test/: route.ts
dev-tools-ui/src/app/test/: page.tsx
dev-tools-ui/src/components/: AnalysisSection.tsx  CompanyCard.tsx  SearchBar.tsx
dev-tools-ui/src/types/: index.ts
dev-tools-ui/tests/: search.spec.ts
frontend/: package-lock.json
web-agent/: .gitignore  main.py  pyproject.toml  requirements.txt
web-agent/src/: firecrawl.py  models.py  prompts.py  workflow.py
